--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>To-Do List</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="stylesheet" type="text/css" href="C:\Users\moksh\OneDrive\Documents\Full stack web development\To-do list app\style.css" />
+    <link rel="stylesheet" type="text/css" href=".\style.css" />
   </head>
   <body>
     <section class="container">
